--- a/xunwu-project/src/main/resources/application.properties
+++ b/xunwu-project/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+# jpa config
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xunwu
 spring.datasource.username=root
