--- a/xunwu-project/src/main/resources/application.properties
+++ b/xunwu-project/src/main/resources/application.properties
@@ -15,3 +15,8 @@ security.basic.enabled=false
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.prefix=classpath:/templates/
+
+server.error.whitelabel.enabled=false
+
+# 指定资源不做热加载
+spring.devtools.restart.additional-exclude=template/**,static/**
