6-1 添加七牛云图片上传功能

--- a/xunwu-project/src/main/resources/application-dev.properties
+++ b/xunwu-project/src/main/resources/application-dev.properties
@@ -6,3 +6,9 @@ spring.datasource.password=123456
 
 #thymeleaf
 spring.thymeleaf.cache=false
+
+# multipart config
+spring.http.multipart.enabled=true
+#spring.http.multipart.location=/tmp/xunwu/images/
+spring.http.multipart.file-size-threshold=5MB
+spring.http.multipart.max-request-size=20MB
