--- a/xunwu-project/src/main/resources/application.properties
+++ b/xunwu-project/src/main/resources/application.properties
@@ -20,3 +20,9 @@ server.error.whitelabel.enabled=false
 
 # 指定资源不做热加载
 spring.devtools.restart.additional-exclude=template/**,static/**
+
+# qiniu 注意替换成自己申请的配置
+qiniu.AccessKey=GVD-MVQEoOiJOt7yNBDo-JrOKWHB33eZN2JmDFC6
+qiniu.SecretKey=sHnl57ZXtStejn7GgY5VF3lnm1CxMJ3hcayexAWz
+qiniu.Bucket=lakers
+qiniu.cdn.prefix=http://7xo6gy.com1.z0.glb.clouddn.com/
