--- a/xunwu-project/pom.xml
+++ b/xunwu-project/pom.xml
@@ -92,6 +92,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- 七牛依赖 -->
+		<dependency>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+			<version>[7.2.0, 7.2.99]</version>
+		</dependency>
+
 		<!-- redis session依赖 -->
 		<!--<dependency>
 			<groupId>org.springframework.session</groupId>
