--- a/xunwu-project/pom.xml
+++ b/xunwu-project/pom.xml
@@ -99,6 +99,12 @@
 			<version>[7.2.0, 7.2.99]</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+
 		<!-- redis session依赖 -->
 		<!--<dependency>
 			<groupId>org.springframework.session</groupId>
