--- a/xunwu-project/pom.xml
+++ b/xunwu-project/pom.xml
@@ -106,6 +106,17 @@
 		</dependency>
 
 		<!-- redis session依赖 -->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<!-- redis session依赖 -->
 		<!--<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session</artifactId>
