--- a/xunwu-project/src/main/resources/application.properties
+++ b/xunwu-project/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.hibernate.sql=debug
 
 #session会话存储类型
-spring.session.store-type=hash_map
+spring.session.store-type=redis
 
 #关闭http基本验证
 security.basic.enabled=false
@@ -26,3 +26,10 @@ qiniu.AccessKey=GVD-MVQEoOiJOt7yNBDo-JrOKWHB33eZN2JmDFC6
 qiniu.SecretKey=sHnl57ZXtStejn7GgY5VF3lnm1CxMJ3hcayexAWz
 qiniu.Bucket=lakers
 qiniu.cdn.prefix=http://7xo6gy.com1.z0.glb.clouddn.com/
+
+# redis config
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.pool.min-idle=1
+spring.redis.timeout=3000
