8-2  索引构建-核心逻辑

--- a/xunwu-project/src/main/resources/application-dev.properties
+++ b/xunwu-project/src/main/resources/application-dev.properties
@@ -12,3 +12,8 @@ spring.http.multipart.enabled=true
 #spring.http.multipart.location=/tmp/xunwu/images/
 spring.http.multipart.file-size-threshold=5MB
 spring.http.multipart.max-request-size=20MB
+
+#elasticsearch
+elasticsearch.cluster.name=xunwu
+elasticsearch.host=192.168.140.129
+elasticsearch.port=9300
