--- a/xunwu-project/src/main/resources/application-test.properties
+++ b/xunwu-project/src/main/resources/application-test.properties
@@ -5,3 +5,9 @@ spring.datasource.url=jdbc:h2:mem:test
 
 spring.datasource.schema=classpath:db/schema.sql
 spring.datasource.data=classpath:db/data.sql
+
+
+#elasticsearch
+elasticsearch.cluster.name=xunwu
+elasticsearch.host=192.168.140.129
+elasticsearch.port=9300
