--- a/xunwu-project/src/main/resources/application-dev.properties
+++ b/xunwu-project/src/main/resources/application-dev.properties
@@ -15,5 +15,7 @@ spring.http.multipart.max-request-size=20MB
 
 #elasticsearch
 elasticsearch.cluster.name=xunwu
-elasticsearch.host=192.168.140.129
+elasticsearch.host=120.79.185.72
 elasticsearch.port=9300
+
+logging.level.com.imooc.service.search=debug
