--- a/xunwu-project/src/main/resources/application.properties
+++ b/xunwu-project/src/main/resources/application.properties
@@ -22,14 +22,15 @@ server.error.whitelabel.enabled=false
 spring.devtools.restart.additional-exclude=template/**,static/**
 
 # qiniu 注意替换成自己申请的配置
-qiniu.AccessKey=GVD-MVQEoOiJOt7yNBDo-JrOKWHB33eZN2JmDFC6
-qiniu.SecretKey=sHnl57ZXtStejn7GgY5VF3lnm1CxMJ3hcayexAWz
-qiniu.Bucket=lakers
-qiniu.cdn.prefix=http://7xo6gy.com1.z0.glb.clouddn.com/
+qiniu.AccessKey=p1RMTHFOOSXoqLSYvavSaOmwSUYJPnEcMyPyCN-q
+qiniu.SecretKey=ljpoznF3_iFkrwGfFwtoixa2Lx_7UHFEJ-vocM3O
+qiniu.Bucket=peter
+qiniu.cdn.prefix=http://p9hsr3jqd.bkt.clouddn.com
 
 # redis config
 spring.redis.database=0
-spring.redis.host=127.0.0.1
+spring.redis.host=120.79.185.72
 spring.redis.port=6379
 spring.redis.pool.min-idle=1
 spring.redis.timeout=3000
+spring.redis.password=123456
