9-2 基于地址获取经纬度的开发实现

--- a/xunwu-project/src/main/resources/application-test.properties
+++ b/xunwu-project/src/main/resources/application-test.properties
@@ -11,3 +11,6 @@ spring.datasource.data=classpath:db/data.sql
 elasticsearch.cluster.name=xunwu
 elasticsearch.host=120.79.185.72
 elasticsearch.port=9300
+
+#thymeleaf
+spring.thymeleaf.cache=false
